force-app/main/default/objects/DC_Non_IT_Load__c/DC_Non_IT_Load__c.object-meta.xml
<CustomObject>
    <label>Non-IT Load</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-IT Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>