force-app/main/default/objects/DC_Non_IT_Load__c/fields/Connected_Power__c.field-meta.xml
<CustomField>
    <fullName>Connected_Power__c</fullName>
    <description>The kW that needs to be allocated to this Non-IT record, preventing it from being sold for IT uses.</description>
    <label>Connected Power</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>