force-app/main/default/objects/DC_Non_IT_Load__c/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Datahall that this Non-IT Load is supports.</description>
    <label>Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Non-IT Loads</relationshipLabel>
    <relationshipName>Non_IT_Loads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>