force-app/main/default/objects/DC_Non_IT_Load__c/fields/Switchgear__c.field-meta.xml
<CustomField>
    <fullName>Switchgear__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Switchgear that the Non-IT Load draws its power from.</description>
    <label>Switchgear</label>
    <referenceTo>DC_Switchgear_Object__c</referenceTo>
    <relationshipLabel>Non-IT Loads</relationshipLabel>
    <relationshipName>Non_IT_Loads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>